[GF#32510] Remove unused local variables and redundant null checking and improve error handling. [KLO, 021113]
SVN-Revision: 1380