@@ -836,7 +836,7 @@ public class JSONObject implements Serializable {
      * @throws JSONException If the key is null.
      */
     public JSONObject put(String key, int value) throws JSONException {
-        put(key, new Integer(value));
+        put(key, Integer.valueOf(value));
         return this;
     }
 
@@ -850,7 +850,7 @@ public class JSONObject implements Serializable {
      * @throws JSONException If the key is null.
      */
     public JSONObject put(String key, long value) throws JSONException {
-        put(key, new Long(value));
+        put(key, Long.valueOf(value));
         return this;
     }
 
@@ -1057,7 +1057,8 @@ public class JSONObject implements Serializable {
             sb.append('}');
             return sb.toString();
         } catch (Exception e) {
-            return null;
+            //return null;
+            return "";
         }
     }
 
